# learn_build_tools

./: .clang-format  .gitignore  README.md
lord/: CMakeLists.txt  build.sh  conanfile.py  configure.sh  note
lord/inc/math/: basic_arithmetic.h
lord/inc/strutil/: str.h
lord/include/math/: basic_arithmetic.h
lord/src/: CMakeLists.txt  main.cpp  test_concept.cpp
lord/src/math/: CMakeLists.txt  basic_arithmetic.cpp
lord/src/strutil/: CMakeLists.txt  str.cpp
normal/: CMakeLists.txt  conanfile.py  configure.sh  note
normal/include/: CMakeLists.txt
normal/include/str/: CMakeLists.txt  string_utility.h
normal/src/: CMakeLists.txt
normal/src/str/: CMakeLists.txt  string_utility.cpp
normallib/: CMakeLists.txt  build.sh  conanfile.py
normallib/inc/: CMakeLists.txt
normallib/inc/math/: CMakeLists.txt  basic_arithmetic.h
normallib/inc/strutil/: CMakeLists.txt  util.h
normallib/src/: CMakeLists.txt
normallib/src/math/: CMakeLists.txt  basic_arithmetic.cpp
normallib/src/strutil/: CMakeLists.txt  util.cpp
