cmake_minimum_required(VERSION 3.27.2)

project(lord CXX)

# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

add_executable(main)
target_include_directories(main PRIVATE include)

find_package(normal REQUIRED)
find_package(ZLIB REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(spdlog REQUIRED)
# find_package(ffmpeg REQUIRED CONFIG)

target_link_libraries(main normal::normal)
target_link_libraries(main ZLIB::ZLIB)
target_link_libraries(main nlohmann_json::nlohmann_json)
target_link_libraries(main spdlog::spdlog)
# target_link_libraries(main ffmpeg::avutil)
# target_link_libraries(main ffmpeg::avcodec)
# target_link_libraries(main ffmpeg::avformat)
# target_link_libraries(main ffmpeg::avdevice)
# target_link_libraries(main ffmpeg::avfilter)
# target_link_libraries(main ffmpeg::swscale)
# target_link_libraries(main ffmpeg::swresample)

# target_link_libraries(main PRIVATE ffmpeg::avutil)
# if (TARGET ffmpeg::avdevice)
#     target_compile_definitions(main PRIVATE HAVE_FFMPEG_AVDEVICE)
#     target_link_libraries(main PRIVATE ffmpeg::avdevice)
# endif ()
# if (TARGET ffmpeg::avfilter)
#     target_compile_definitions(main PRIVATE HAVE_FFMPEG_AVFILTER)
#     target_link_libraries(main PRIVATE ffmpeg::avfilter)
# endif ()
# if (TARGET ffmpeg::avformat)
#     target_compile_definitions(main PRIVATE HAVE_FFMPEG_AVFORMAT)
#     target_link_libraries(main PRIVATE ffmpeg::avformat)
# endif ()
# if (TARGET ffmpeg::avcodec)
#     target_compile_definitions(main PRIVATE HAVE_FFMPEG_AVCODEC)
#     target_link_libraries(main PRIVATE ffmpeg::avcodec)
# endif ()
# if (TARGET ffmpeg::swscale)
#     target_compile_definitions(main PRIVATE HAVE_FFMPEG_SWSCALE)
#     target_link_libraries(main PRIVATE ffmpeg::swscale)
# endif ()
# if (TARGET ffmpeg::swresample)
#     target_compile_definitions(main PRIVATE HAVE_FFMPEG_SWRESAMPLE)
#     target_link_libraries(main PRIVATE ffmpeg::swresample)
# endif ()
# if (TARGET ffmpeg::postproc)
#     target_compile_definitions(main PRIVATE HAVE_FFMPEG_POSTPROC)
#     target_link_libraries(main PRIVATE ffmpeg::postproc)
# endif ()

add_subdirectory(src)

